# bart

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  bart_ascii.txt  kma_test.aln  kma_test.fsa  kma_test.res  notes.txt  requirements.txt  setup.cfg  setup.py  ter temp
bart/: bart  bart-profile  bart-update  finch-mac64-v0.3.0  finch.py  kma.py
bart.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bart/scripts/: ascii.py  kma.py  mash.py  refseq_masher.py  version.py
db/: scheme_species_map.tab
db/genes/Acinetobacter baumannii/: pirA.fna  piuA.fna
db/mlst/Acinetobacter baumannii/: ab_mlst.length.b  ab_mlst.name  ab_mlst.seq.b
db/mlst/Acinetobacter baumannii/ab_mlst_pasteur/: Pas_cpn60.fas  Pas_fusA.fas  Pas_gltA.fas  Pas_pyrG.fas  Pas_recA.fas  Pas_rplB.fas  Pas_rpoB.fas
genefinda/: fqcnt_rs2_needletail.rs  genefinda  parse_input.rs  rust_scripts.rs
genefinda/methods/: Fq_utils.py  fetch_schemes.py  finch.py  genefinda  kma.py  mlst.py  readfq.py
genefinda/tools/: finch.py
methods/: Fq_utils.py
tests/: test.res  test.sk  testfile.sk
tools/: run_kma.py
