[package]
name = "genefinda"
version = "0.0.1"
authors = ["Tom Stanton <tomdstanton@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/tomdstanton/genefinda"
keywords = ["bacterial-genome-analysis", "bioinformatics"]

[dependencies]
needletail = "*"
pyo3 = { version = "0.8.5", features = ["extension-module"] }
bio = "*"
miniz_oxide = "*"
finch = "0.4.1"